<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.steven.avgraphics.ui.MainActivity">

    <Button
        android:id="@+id/main_btn_draw_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:text="@string/main_btn_draw_image"/>

    <Button
        android:id="@+id/main_btn_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:text="@string/main_btn_audio"/>

    <Button
        android:id="@+id/main_btn_hwcodec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:text="@string/main_btn_hwcodec"/>

</LinearLayout>
