<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.steven.avgraphics.activity.OpenSLActivity">

    <Button
        android:id="@+id/opensl_btn_start_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/opensl_btn_start_play"/>

    <Button
        android:id="@+id/opensl_btn_stop_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:text="@string/opensl_btn_stop_play"/>

    <Button
        android:id="@+id/opensl_btn_start_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/opensl_btn_start_record"/>

    <Button
        android:id="@+id/opensl_btn_stop_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:text="@string/opensl_btn_stop_record"/>

</LinearLayout>
